2012-10-08  Matevz Tadel <matevz@desire.physics.ucsd.edu>

	* xrd-hadoop-healer.pl:
	Read checksums written by Phedex and store them into a hash ... if
	they exist.

2012-10-03  Matevz Tadel <matevz.tadel@ijs.si>

	* xrd-hadoop-healer.pl:
	New file, wrapper gluing together all other commands.

	* Makefile:
	Make default xrd install dir /usr.

2012-09-26  Matevz Tadel <matevz.tadel@ijs.si>

	* xrdfragcp.cxx:
	Add command-line option parsing, getting of several fragments.

2012-09-05  Matevz Tadel <matevz.tadel@ijs.si>

	Initial commit.

	* ChangeLog:
	* Makefile:
	* xrdfragcp.cxx:
	First version, gets a single fragment and dumps it to stdout.